Use BigInteger for sum_of_squares
Fixes #10